# opengl-viewer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
assets/animations/: cube_grid_flythrough.json  drone_flythrough.json  flythrough.json
assets/gismo/: poisson_square_test.xml  surfacepoisson_sphere_bvp.xml
assets/meshes/textured/: textured_cube.mtl
shaders/: background.frag  background.vert  mesh.frag  mesh.vert  picking.frag  text.frag  text.vert
src/: Application.cpp  Application.h  main.cpp
src/animation/: CameraAnimation.cpp  CameraAnimation.h  CameraKeyframe.h
src/app/: Application.cpp  Application.h  main.cpp
src/async/: LODTask.h  PoissonTask.h  Progress.h  SubdivisionTask.h  TaskManager.h  TessellationTask.h
src/core/: Shader.cpp  Shader.h  Texture.cpp  Texture.h  Timer.h  Window.cpp  Window.h
src/geometry/: Subdivision.cpp  Subdivision.h  SubdivisionManager.cpp  SubdivisionManager.h  SubdivisionTask.h
src/lod/: LODLevel.h  LODManager.cpp  LODManager.h  LODMesh.cpp  LODMesh.h  LODSelector.h  LODTask.h  MeshSimplifier.cpp  MeshSimplifier.h
src/mesh/: Mesh.cpp  Mesh.h  MeshData.h  MeshLoader.cpp  MeshLoader.h  ObjLoader.cpp  ObjLoader.h
src/multipatch/: GismoLoader.cpp  GismoLoader.h  MultiPatchManager.cpp  MultiPatchManager.h  PatchObject.cpp  PatchObject.h  PoissonManager.cpp  PoissonManager.h  TessellationManager.cpp  TessellationManager.h
src/renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h
src/scene/: BoundingBox.h  Frustum.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
src/ui/: HelpOverlay.cpp  HelpOverlay.h  ProgressOverlay.cpp  ProgressOverlay.h
src/util/: Result.h  TextRenderer.cpp  TextRenderer.h
